--- a/templates/index.hbs
+++ b/templates/index.hbs
@@ -3,15 +3,30 @@
     <head>
         <meta charset="utf-8">
         <title>Hair Salon</title>
+        <link rel="stylesheet" href="/lib/bootstrap/dist/css/bootstrap.css" type="text/css">
+
+
+        <script src="/lib/bootstrap/dist/js/bootstrap.js"></script>
+
     </head>
     <body>
-        <h2>Hair Salon</h2>
-        <nav>
-            <a href="/">Home</a>
-            <a href="/services">Services</a>
-            <a href="/products">Products</a>
-            <a href="/">calender</a>
-            <a href="/login">Log In</a>
+        <nav class="navbar navbar-default">
+            <div class="container-fluid">
+                <div class="navbar-header">
+                    <a class="navbar-brand" href="#">Hair Salon</a>
+                </div>
+                <ul class="nav navbar-nav">
+                    <li><a href="/">Home</a></li>
+                    <li><a href="/services">Services</a></li>
+                    <li><a href="/products">Products</a></li>
+                    <li><a href="/user/login">Log In</a></li>
+                    <li><a href="/user/register">Register</a></li>
+                    <li><a href="/date/calendar">Calender</a></li>
+                    <li><a href="/date/logout">log Out</a></li>
+                </ul>
+            </div>
+        </nav>
+
 
 
 
