--- a/templates/partials/login.hbs
+++ b/templates/partials/login.hbs
@@ -1,8 +1,11 @@
 <h2>Log in page</h2>
 
-
-<form method='POST' action="/user/login" enctype="application/x-www-form-urlencoded">
-    <input name="username" placeholder="User Name">
-    <input type="password"name="password" placeholder="Password">
-    <button type="submit">LogIn</button>
+ <form method='POST' action="/user/login" enctype="application/x-www-form-urlencoded">
+  <div class="form-group">
+      <input name="username" placeholder="Username"class="form-control" id='usr'>
+  </div>
+  <div class="form-group">
+      <input type="password" name="password" placeholder="Password" class="form-control" id="pwd">
+  </div>
+  <button type="submit" class="btn btn-default">Submit</button>
 </form>
