added calendar. can now add appointment and get to edit page

--- a/templates/index.hbs
+++ b/templates/index.hbs
@@ -13,21 +13,24 @@
         <nav class="navbar navbar-default">
             <div class="container-fluid">
                 <div class="navbar-header">
-                    <a class="navbar-brand" href="#">Hair Salon</a>
+                    <a class="navbar-brand">Hair Salon</a>
                 </div>
                 <ul class="nav navbar-nav">
                     <li><a href="/">Home</a></li>
                     <li><a href="/services">Services</a></li>
                     <li><a href="/products">Products</a></li>
-                    <li><a href="/user/login">Log In</a></li>
+                    <li><a href="/calendar">Calendar</a></li>
+                    <li><a href="/user/logout">Log Out</a></li>
+                    <li><a href="/user/login">LogIn</a></li>
                     <li><a href="/user/register">Register</a></li>
-                    <li><a href="/date/calendar">Calender</a></li>
-                    <li><a href="/date/logout">log Out</a></li>
                 </ul>
             </div>
         </nav>
 
 
+        <!-- {{#if user}}
+        {{else}}
+        {{/if}} -->
 
 
             <!-- NOTE:6 This is where and how you inject the body content -->
