--- a/templates/partials/calendar/list.hbs
+++ b/templates/partials/calendar/list.hbs
@@ -7,13 +7,13 @@
     <div class="panel panel-default">
         <div class="panel-body" >
             <div>
-                <strong>Name </strong> <a href="/calendar/{{id}}">{{username}}</a> 
+                <strong>Name </strong> <a href="/calendar/{{id}}">{{username}}</a>
             </div>
             <div>
-                <strong>Date </strong> {{date}}
+                <strong>Date and Time</strong> {{date}}
             </div>
             <div>
-                <strong>Time </strong> {{time}}
+                <strong>Time</strong> {{time}}
             </div>
             <div>
                 <strong>Color </strong> {{color}}
