--- a/templates/index.hbs
+++ b/templates/index.hbs
@@ -7,6 +7,9 @@
 
 
         <script src="/lib/bootstrap/dist/js/bootstrap.js"></script>
+        <script src="/lib/jquery/dist/jquery.js">
+
+        </script>
 
     </head>
     <body>
@@ -19,24 +22,18 @@
                     <li><a href="/">Home</a></li>
                     <li><a href="/services">Services</a></li>
                     <li><a href="/products">Products</a></li>
+                    {{#if user}}
                     <li><a href="/calendar">Calendar</a></li>
                     <li><a href="/user/logout">Log Out</a></li>
+                    {{else}}
                     <li><a href="/user/login">LogIn</a></li>
                     <li><a href="/user/register">Register</a></li>
+                    {{/if}}
                 </ul>
             </div>
-        </nav>
-
-
-        <!-- {{#if user}}
-        {{else}}
-        {{/if}} -->
-
 
             <!-- NOTE:6 This is where and how you inject the body content -->
-            {{{body}}}
+        {{{body}}}
 
-
-        </nav>
     </body>
 </html>
