--- a/templates/index.hbs
+++ b/templates/index.hbs
@@ -22,6 +22,7 @@
                     <li><a href="/">Home</a></li>
                     <li><a href="/services">Services</a></li>
                     <li><a href="/products">Products</a></li>
+                    <li><a href="/admin/#">Angular</a></li>
                     {{#if user}}
                     <li><a href="/calendar">Calendar</a></li>
                     <li><a href="/user/logout">Log Out</a></li>
