--- a/templates/partials/login.hbs
+++ b/templates/partials/login.hbs
@@ -9,11 +9,13 @@
 {{/if}}
 
  <form method='POST' action="/user/login" enctype="application/x-www-form-urlencoded">
-  <div class="form-group">
-      <input name="username" placeholder="Username"class="form-control" id='usr'>
-  </div>
-  <div class="form-group">
-      <input type="password" name="password" placeholder="Password" class="form-control" id="pwd">
-  </div>
+     <div class="input-group">
+         <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
+         <input id="usr" type="text" class="form-control" name="username" placeholder="Username">
+     </div>
+     <div class="input-group">
+         <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
+         <input id="password" type="password" class="form-control" name="password" placeholder="Password">
+     </div>
   <button type="submit" class="btn btn-default">Submit</button>
 </form>
