--- a/templates/partials/calendar/date.hbs
+++ b/templates/partials/calendar/date.hbs
@@ -1,19 +1,6 @@
 <h2>CALENDAR</h2>
 
-<a class="btn btn-primary" href="calendar/create">Make Apionment</a>
-<a class="btn btn-primary" href="/calendar">All Appointments</a>
-
-
-   <form method = "POST" action="/calendar" enctype="application/x-www-form-urlencoded">
-       <input name="_method" type="hidden" value="GET">
-       <div class="form-group">
-           <label for="date">Date: </label>
-           <input name="date" type="date" placeholder="Starting Date">
-       </div>
-   <button class="btn btn-default" type="submit">Load</button>
-   </form>
-
-
+<a class="btn btn-primary" href="create">Make Apionment</a>
 
 {{#each data.appointmentList}}
     <div class="panel panel-default">
