--- a/templates/index-angular.hbs
+++ b/templates/index-angular.hbs
@@ -7,7 +7,7 @@
 
 <!-- you need ng app to inject the body -->
 
-    <body ng-app>
+    <body ng-app="App">
         <nav>
             <a href="/">Express</a>
             <a href="/admin/#/">Angular Home</a>
@@ -21,7 +21,6 @@
 
             <script src="/lib/angular/angular.js"></script>
             <script src="/lib/angular-ui-router/release/angular-ui-router.js"></script>
-
             <script src="/js/angular/App.js"></script>
 
 
