added products using express. products is crud ready

--- a/templates/index.hbs
+++ b/templates/index.hbs
@@ -21,7 +21,7 @@
                 <ul class="nav navbar-nav">
                     <li><a href="/">Home</a></li>
                     <li><a href="/services">Services</a></li>
-                    <li><a href="/products">Products</a></li>
+                    <li><a href="/product">Products</a></li>
                     <li><a href="/admin/#">Angular</a></li>
                     {{#if user}}
                     <li><a href="/user/logout">Log Out</a></li>
