--- a/templates/partials/calendar/date.hbs
+++ b/templates/partials/calendar/date.hbs
@@ -1,3 +1,5 @@
+<body id="date">
+
 <h2>CALENDAR</h2>
 
 <a class="btn btn-primary" href="create">Make Apionment</a>
@@ -20,3 +22,5 @@
         </div>
     </div>
 {{/each}}
+
+</body>
