--- a/templates/partials/login.hbs
+++ b/templates/partials/login.hbs
@@ -7,7 +7,7 @@
     </p>
 </div>
 {{/if}}
-
+<!--
  <form method='POST' action="/user/login" enctype="application/x-www-form-urlencoded">
      <div class="input-group">
          <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
@@ -18,4 +18,42 @@
          <input id="password" type="password" class="form-control" name="password" placeholder="Password">
      </div>
   <button type="submit" class="btn btn-default">Submit</button>
+</form> -->
+
+
+<form class="ui form" method='POST' action="/user/login" enctype="application/x-www-form-urlencoded">
+    <div class="field">
+        <label>Username</label>
+        <input type="text"name="username" placeholder="Username">
+    </div>
+    <div class="field">
+        <label>Password</label>
+        <input type="password"  name="password" placeholder="Password">
+    </div>
+  <button class="ui button" type="submit">Submit</button>
+  <a class="ui submit button" href="/user/register"class="item">Register</a>
+
 </form>
+
+
+<script>
+    $('.ui.form')
+    .form({
+        fields: {
+            username: {
+                identifier: 'username',
+                rules: [{
+                    type: 'empty',
+                    prompt : 'Please enter your username'
+                }]
+            },
+            password: {
+                identifier: 'password',
+                rules: [{
+                    type   : 'empty',
+                    prompt : 'Please enter a password'
+                ]}
+            },
+        }
+    });
+</script>
