styled some of my products and calendar. started products angular

--- a/public/css/style.less
+++ b/public/css/style.less
@@ -25,6 +25,7 @@ body#home {
 }
 .columnview {
     // border: 10px solid blue;
+    opacity: 0.8;
     padding-top: 30px;
     padding-right: 70%;
 }
