--- a/templates/index-angular.hbs
+++ b/templates/index-angular.hbs
@@ -21,9 +21,11 @@
 
             <script src="/lib/angular/angular.js"></script>
             <script src="/lib/angular-ui-router/release/angular-ui-router.js"></script>
+            <!-- connect the App.js and controllers together -->
             <script src="/js/angular/App.js"></script>
-
-
+            <script src="/js/angular/HomeController.js"></script>
+            <script src="/js/angular/ProductsController.js"></script>
+            
         </nav>
     </body>
 </html>
