--- a/templates/partials/calendar/list.hbs
+++ b/templates/partials/calendar/list.hbs
@@ -10,7 +10,7 @@
            <label for="date">Date: </label>
            <input name="date" type="date" placeholder="Starting Date">
        </div>
-   <button class="ui secondary button" type="submit">Load</button>
+   <button class="ui secondary button" type="submit">Load Date</button>
    </form>
 </div>
 
