--- a/templates/partials/login.hbs
+++ b/templates/partials/login.hbs
@@ -30,7 +30,7 @@
         <label>Password</label>
         <input type="password"  name="password" placeholder="Password">
     </div>
-  <button class="ui button" type="submit">Submit</button>
+  <button class="ui button" type="submit">LogIn</button>
   <a class="ui submit button" href="/user/register"class="item">Register</a>
 
 </form>
