--- a/templates/index.hbs
+++ b/templates/index.hbs
@@ -2,6 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Hair Salon</title>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.6/semantic.css" type="text/css">
         <link rel="stylesheet" href="/css/style.less" type="text/less">
