--- a/templates/partials/product/list.hbs
+++ b/templates/partials/product/list.hbs
@@ -30,3 +30,11 @@
     </div>
 
 {{/each}}
+
+<!-- {{#each data.productList}}
+    <div class="column">
+        <div class="ui inverted segment" >
+        <div class="ui inverted divider"></div>
+        </div>
+    </div>
+{{/each}} -->
