added sample carosale from boothstrap

--- a/templates/index.hbs
+++ b/templates/index.hbs
@@ -4,9 +4,11 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Hair Salon</title>
+        <!-- <link href="/lib/normalize-css/normalize.css" rel="stylesheet" type="text/css"> -->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.6/semantic.css" type="text/css">
         <link rel="stylesheet" href="/css/style.less" type="text/less">
-        <!-- <link rel="stylesheet" href="/lib/bootstrap/dist/css/bootstrap.css" type="text/css"> -->
+        <link rel="stylesheet" href="/lib/bootstrap/dist/css/bootstrap.css" type="text/css">
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/bxslider/4.2.5/jquery.bxslider.css" rel="stylesheet" type="text/css">
 
         <script>
             less = {
@@ -23,7 +25,7 @@
 
         <script src="/lib/less/dist/less.js"></script>
         <script src="/lib/jquery/dist/jquery.js"></script>
-        <!-- <script src="/lib/bootstrap/dist/js/bootstrap.js"></script> -->
+        <script src="/lib/bootstrap/dist/js/bootstrap.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.6/semantic.js"></script>
 
     </head>
@@ -54,6 +56,9 @@
             </div>
         </div>
 
+        <script src="/lib/jquery/dist/jquery.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/bxslider/4.2.5/jquery.bxslider.js"></script>
+        <script src="/js/jquery-sample.js"></script>
             <!-- NOTE:6 This is where and how you inject the body content -->
         {{{body}}}
 
