Added small changes not added in last commit

--- a/public/css/style.less
+++ b/public/css/style.less
@@ -13,6 +13,11 @@ body#home {
     background-image: url('./css/images/52611458-hair-wallpaper.jpg') ;
 }
 
+.photo {
+    // border: 10px solid blue;
+    margin: auto;
+    max-height: 350px
+}
 .column {
     // border: 10px solid blue;
     // float: left;
