--- a/templates/index.hbs
+++ b/templates/index.hbs
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.6/semantic.css" type="text/css">
         <link rel="stylesheet" href="/css/style.less" type="text/less">
         <link rel="stylesheet" href="/lib/bootstrap/dist/css/bootstrap.css" type="text/css">
-        <link href="https://cdnjs.cloudflare.com/ajax/libs/bxslider/4.2.5/jquery.bxslider.css" rel="stylesheet" type="text/css">
+        <!-- <link href="https://cdnjs.cloudflare.com/ajax/libs/bxslider/4.2.5/jquery.bxslider.css" rel="stylesheet" type="text/css"> -->
 
         <script>
             less = {
@@ -30,7 +30,7 @@
 
     </head>
     <body>
-        <div class="ui inverted fixed menu">
+        <div class="ui massive inverted fixed menu">
             <a href="/"class="item">Home</a>
             <a href="/services"class="item">Services</a>
             <a href="/product"class="item">Products</a>
@@ -56,9 +56,9 @@
             </div>
         </div>
 
-        <script src="/lib/jquery/dist/jquery.js"></script>
+        <!-- <script src="/lib/jquery/dist/jquery.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/bxslider/4.2.5/jquery.bxslider.js"></script>
-        <script src="/js/jquery-sample.js"></script>
+        <script src="/js/jquery-sample.js"></script> -->
             <!-- NOTE:6 This is where and how you inject the body content -->
         {{{body}}}
 
