--- a/templates/partials/home.hbs
+++ b/templates/partials/home.hbs
@@ -1,44 +1,39 @@
 <body id="home">
     <h2>Home</h2>
 
-    <div id="myCarousel" class="carousel slide" data-ride="carousel">
-      <!-- Indicators -->
-      <ol class="carousel-indicators">
-        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-        <li data-target="#myCarousel" data-slide-to="1"></li>
-        <li data-target="#myCarousel" data-slide-to="2"></li>
-        <li data-target="#myCarousel" data-slide-to="3"></li>
-      </ol>
+        <div id="myCarousel" class="carousel slide" data-ride="carousel">
+          <ol class="carousel-indicators">
+            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+            <li data-target="#myCarousel" data-slide-to="1"></li>
+            <li data-target="#myCarousel" data-slide-to="2"></li>
+            <li data-target="#myCarousel" data-slide-to="3"></li>
+          </ol>
+          <div class="carousel-inner" role="listbox">
+            <div class="item active">
+              <img class="photo" src="http://meridianmodular.co/wp-content/uploads/2012/03/Environment_shutterstock_87054440_crop.jpg">
+            </div>
 
-      <!-- Wrapper for slides -->
-      <div class="carousel-inner" role="listbox">
-        <div class="item active">
-          <img src="http://meridianmodular.co/wp-content/uploads/2012/03/Environment_shutterstock_87054440_crop.jpg" alt="Chania">
+            <div class="item">
+              <img class="photo" src="http://www.citybuildingintranet.co.uk/images/800x350_environment.jpg">
+            </div>
+
+            <div class="item">
+              <img class="photo"src="../css/images/hair.JPG">
+            </div>
+
+            <div class="item">
+              <img class="photo"src="../css/images/salon.JPG">
+            </div>
+          </div>
+          <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+            <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+            <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>
         </div>
-
-        <div class="item">
-          <img src="http://www.citybuildingintranet.co.uk/images/800x350_environment.jpg" alt="Chania">
-        </div>
-
-        <div class="item">
-          <img src="http://fyi.uwex.edu/wp-content/themes/fyi-2011/images/topics/Environment.jpg" alt="Flower">
-        </div>
-
-        <div class="item">
-          <img src="http://www.costa.co.uk/media/110637/EnvironmentHeader.jpg" alt="Flower">
-        </div>
-      </div>
-
-      <!-- Left and right controls -->
-      <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-      </a>
-      <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-      </a>
-    </div>
 
 
 
