added mlab for online db

--- a/templates/partials/user/register.hbs
+++ b/templates/partials/user/register.hbs
@@ -2,7 +2,7 @@
 
 <div class="ui inverted segment">
     <div class="ui inverted form">
-        <form method='POST' action="/user/register" enctype="application/x-www-form-urlencoded">
+        <form method='POST' action="/register" enctype="application/x-www-form-urlencoded">
             <div class="two fields">
                 <div class="field">
                     <label>User Name</label>
