--- a/templates/partials/product/edit.hbs
+++ b/templates/partials/product/edit.hbs
@@ -11,7 +11,7 @@
                 </div>
                 <div class="field">
                     <label>Price</label>
-                    <input name="price" placeholder="Price" value="{{data.product.price}} {{data.method}}">
+                    <input name="price" placeholder="Price" value="{{data.product.price}}">
                 </div>
             </div>
 
