--- a/templates/partials/services.hbs
+++ b/templates/partials/services.hbs
@@ -1,1 +1,122 @@
-<h2>Services</h2>
+<body id="services">
+    <h2>Services</h2>
+    <div class="body">
+        <div class="row">
+            <div class="column">
+                <div class="info">
+                    <h3>Hair cut servesis</h3>
+                    <p>
+                        Quisque sed quam dolor, scelerisque iaculis orci. Aenean a scelerisque enim. Sed accumsan tristique ipsum, in vestibulum nulla fermentum quis. Integer porttitor elementum est ut laoreet.
+                    </p>
+
+                </div>
+            </div>
+            <div class="column">
+                <a href="#">
+                    <div class="product">
+                        <img src="./css/images/hair1.jpg"/>
+                        <h3>Man hair cut</h3>
+                    </div>
+                </a>
+            </div>
+            <div class="column">
+                <a href="#">
+                    <div class="product">
+                        <img src="./css/images/hair1.jpg"/>
+                        <h3>product name</h3>
+                    </div>
+                </a>
+            </div>
+            <div class="column">
+                <a href="#">
+                    <div class="product">
+                        <img src="./css/images/hair1.jpg"/>
+                        <h3>product name</h3>
+                    </div>
+                </a>
+            </div>
+        </div>
+        <div class="row">
+            <div class="column">
+                <div class="info">
+                    <h3>Our Featured Products</h3>
+                    <p>
+                        Quisque sed quam dolor, scelerisque iaculis orci. Aenean a scelerisque enim. Sed accumsan tristique ipsum, in vestibulum nulla fermentum quis. Integer porttitor elementum est ut laoreet.
+                    </p>
+                </div>
+            </div>
+            <div class="column">
+                <a href="#">
+                    <div class="product">
+                        <img src="./css/images/hair1.jpg"/>
+                        <h3>product name</h3>
+                    </div>
+                </a>
+            </div>
+            <div class="column">
+                <a href="#">
+                    <div class="product">
+                        <img src="./css/images/hair1.jpg"/>
+                        <h3>product name</h3>
+                    </div>
+                </a>
+            </div>
+            <div class="column">
+                <a href="#">
+                    <div class="product">
+                        <img src="./css/images/hair1.jpg"/>
+                        <h3>product name</h3>
+                    </div>
+                </a>
+            </div>
+        </div>
+    </div>
+</body>
+
+
+
+
+
+
+
+
+
+<!-- <h2>Services</h2>
+
+<div>
+    <strong>Haircut</strong>
+    <p>Woman</p><p>38.00</p>
+    <hr>
+</div>
+<strong>Haircut
+Women  38.00
+Men  22.00
+Teen(13-19)  20.00
+Kids (12+ under)  18.00
+Beard, neck or bang trim  8.00
+​
+Styles
+Formal Style 50.00
+Shampoo & Style 25.00
+Senior Shampoo & Set 25.00
+
+*All texture & color service prices vary by length & density of hair
+Texture Services
+Perm 65.00*
+Keratin 200.00*
+
+Color
+All over 1 color 70.00*
+Retouch(1' or less growth) 55.00
+Color correction 50.00 per hour
+Add Haircut 15.00
+
+Highligths/Low ligths
+Partial (up to 10 foils) 60.00
+​​Full 85.00*
+Add Haircut 15.00
+
+Facial Wax
+Eyebrows 10.00
+Lip 10.00
+Chin 10.00</strong> -->
