--- a/templates/partials/services.hbs
+++ b/templates/partials/services.hbs
@@ -4,9 +4,9 @@
         <div class="row">
             <div class="column">
                 <div class="info">
-                    <h3>Hair cut servesis</h3>
+                    <h3>Hair Cut services</h3>
                     <p>
-                        Quisque sed quam dolor, scelerisque iaculis orci. Aenean a scelerisque enim. Sed accumsan tristique ipsum, in vestibulum nulla fermentum quis. Integer porttitor elementum est ut laoreet.
+                        This is a small example of the hair cut services available. Of corse if there is some thing that is difrent that you would like to have done then just let us know.
                     </p>
 
                 </div>
@@ -16,6 +16,7 @@
                     <div class="product">
                         <img src="./css/images/hair1.jpg"/>
                         <h3>Man hair cut</h3>
+                        <h3>Starting at $22.00</h3>
                     </div>
                 </a>
             </div>
@@ -23,7 +24,8 @@
                 <a href="#">
                     <div class="product">
                         <img src="./css/images/hair1.jpg"/>
-                        <h3>product name</h3>
+                        <h3>Kids Hair cut</h3>
+                        <h3>Starting at $18.00</h3>
                     </div>
                 </a>
             </div>
@@ -31,7 +33,8 @@
                 <a href="#">
                     <div class="product">
                         <img src="./css/images/hair1.jpg"/>
-                        <h3>product name</h3>
+                        <h3>Woman hair cut</h3>
+                        <h3>Starting at $38.00</h3>
                     </div>
                 </a>
             </div>
